# Astronaut-Digital-Twin

./: .gitignore  CMakeLists.txt  README.md  TODO.md  run_backend.sh  run_frontend.sh  run_paths.sh
biogears/include/biogears/schema/: BioGearsDataModel.hxx  CommonDataModel.hxx
biogears/lib/cmake/Biogears/: Biogears-release.cmake  Biogears.cmake
biogears/runtime/Scenarios/Astronaut/: ARED_Exercise.xml  CEVIS_Cycling.xml  COLBERT_Treadmill.xml  Exercise_With_Rehydration.xml  Just_Return_To_Earth.xml  Mars_Gravity_Transition.xml  Microgravity_Return.xml  Microgravity_Transition.xml  (+3 more)
biogears/runtime/environments/: ISS_Cabin.xml  Mars_Habitat.xml  Moon_Habitat.xml
biogears/runtime/nutrition/: AstronautMeal_PostExercise.xml  AstronautMeal_Standard.xml
biogears/runtime/states/: DefaultTemplateFemale@0s.xml  DefaultTemplateMale@0s.xml  Female@0s.xml  Female_18_Normal@0s.xml  Female_30_Normal@0s.xml  Female_40_Overweight@0s.xml  Male@0s.xml  Male_22_Fit_Soldier@0s.xml  Male_24_Normal_hidrosis2@0s.xml  Male_25_Normal@0s.xml  Male_28_Normal_hr109_rr18@0s.xml  Male_32_Normal_hr93_rr14@0s.xml  Male_44_Bradycardic@0s.xml  Male_44_Normal_hr109_rr15@0s.xml  Male_44_Normal_rr12@0s.xml  Male_44_SleepDeprived@0s.xml  Male_44_Tachycardic@0s.xml  StandardFemale@0s.xml  StandardMale@0s.xml
frontend/: index.html
src/: ApiServer.cpp  ApiServer.h  BioGearsEngineManager.cpp  BioGearsEngineManager.h  EventProcessor.cpp  EventProcessor.h  PhysiologyState.cpp  PhysiologyState.h  ScenarioPlayer.cpp  ScenarioPlayer.h  SimulationLoop.cpp  SimulationLoop.h  main.cpp
tests/: smoke_test.sh
(+32 files in other folders)
